# prehooks

./: .pre-commit-config.yaml  pyproject.toml
prehooks/: main.py
tests/: test_main.py
